# plato-unified-belief

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs
src/plato_unified_belief/: __init__.py  belief.py
src/plato_unified_belief.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
