[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "plato-unified-belief"
version = "0.1.0"
description = "Unified belief scoring — confidence × trust × relevance with conflict detection"
license = {text = "MIT"}
requires-python = ">=3.8"
